--- a/api-spec.yml
+++ b/api-spec.yml
@@ -1,10 +1,11 @@
-api-spec: 3.0.3
+swagger: "2.0"
 info:
   title: Task API
   version: "1.0.0"
 
-servers:
-  - url: /api
+basePath: /api
+schemes:
+  - http
 
 tags:
   - name: Tasks
@@ -15,90 +16,105 @@ paths:
     get:
       tags: [Tasks]
       summary: List tasks (search + pagination)
+      produces:
+        - application/json
       parameters:
         - in: query
           name: q
-          schema: { type: string }
+          type: string
           required: false
           description: Search query (matches task content)
         - in: query
           name: page
-          schema: { type: integer, default: 1, minimum: 1 }
+          type: integer
           required: false
+          default: 1
+          minimum: 1
         - in: query
           name: per_page
-          schema: { type: integer, default: 5, minimum: 1, maximum: 100 }
+          type: integer
           required: false
+          default: 5
+          minimum: 1
+          maximum: 100
+        - in: query
+          name: sort
+          type: string
+          required: false
+          enum: [asc, desc]
+          default: desc
+          description: Sort by created time (asc = first added, desc = newest first)
       responses:
-        "200":
+        200:
           description: Paginated list of tasks
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/PaginatedTasks"
+          schema:
+            $ref: "#/definitions/PaginatedTasks"
 
     post:
       tags: [Tasks]
       summary: Create a task
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/CreateTaskRequest"
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/CreateTaskRequest"
       responses:
-        "201":
+        201:
           description: Task created
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Task"
-        "400":
+          schema:
+            $ref: "#/definitions/Task"
+        400:
           description: Invalid payload
 
   /tasks/{id}:
     get:
       tags: [Tasks]
       summary: Get task by id
+      produces:
+        - application/json
       parameters:
         - in: path
           name: id
           required: true
-          schema: { type: integer }
+          type: integer
       responses:
-        "200":
+        200:
           description: One task
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Task"
-        "404":
+          schema:
+            $ref: "#/definitions/Task"
+        404:
           description: Not found
 
     put:
       tags: [Tasks]
       summary: Update task by id
+      consumes:
+        - application/json
+      produces:
+        - application/json
       parameters:
         - in: path
           name: id
           required: true
-          schema: { type: integer }
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UpdateTaskRequest"
+          type: integer
+        - in: body
+          name: body
+          required: true
+          schema:
+            $ref: "#/definitions/UpdateTaskRequest"
       responses:
-        "200":
+        200:
           description: Updated task
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Task"
-        "400":
+          schema:
+            $ref: "#/definitions/Task"
+        400:
           description: Invalid payload
-        "404":
+        404:
           description: Not found
 
     delete:
@@ -108,102 +124,135 @@ paths:
         - in: path
           name: id
           required: true
-          schema: { type: integer }
+          type: integer
       responses:
-        "204":
+        204:
           description: Deleted
-        "404":
+        404:
           description: Not found
 
   /tasks/import-csv:
     post:
       tags: [Tasks]
       summary: Import tasks from CSV
-      description: >
-        Upload a CSV file. Supports header columns `content,completed`
-        OR single-column rows with task content.
-      requestBody:
-        required: true
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              required: [file]
-              properties:
-                file:
-                  type: string
-                  format: binary
+      consumes:
+        - multipart/form-data
+      produces:
+        - application/json
+      parameters:
+        - in: formData
+          name: file
+          type: file
+          required: true
+          description: CSV file. Supports header content,completed OR single-column rows.
       responses:
-        "200":
+        200:
           description: Import summary
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ImportSummary"
-        "400":
+          schema:
+            $ref: "#/definitions/ImportSummary"
+        400:
           description: Bad request
-        "500":
+        500:
           description: DB insert failed
 
   /tasks/export-csv:
     get:
       tags: [Tasks]
       summary: Export tasks to CSV
+      produces:
+        - text/csv
       parameters:
         - in: query
           name: q
-          schema: { type: string }
+          type: string
           required: false
           description: Optional search filter before exporting
       responses:
-        "200":
+        200:
           description: CSV file download
-          content:
-            text/csv:
-              schema:
-                type: string
+          schema:
+            type: string
 
-components:
-  schemas:
-    Task:
-      type: object
-      properties:
-        id: { type: integer, example: 1 }
-        content: { type: string, example: "Buy groceries" }
-        completed: { type: integer, example: 0 }
-        created: { type: string, example: "2025-12-23T10:30:00" }
+definitions:
+  Task:
+    type: object
+    properties:
+      id:
+        type: integer
+        example: 1
+      content:
+        type: string
+        example: "Buy groceries"
+      completed:
+        type: integer
+        example: 0
+      created:
+        type: string
+        example: "2025-12-23T10:30:00"
 
-    CreateTaskRequest:
-      type: object
-      required: [content]
-      properties:
-        content: { type: string, example: "Read system design notes" }
-        completed: { type: integer, default: 0, example: 0 }
+  CreateTaskRequest:
+    type: object
+    required: [content]
+    properties:
+      content:
+        type: string
+        example: "Read system design notes"
+      completed:
+        type: integer
+        default: 0
+        example: 0
 
-    UpdateTaskRequest:
-      type: object
-      properties:
-        content: { type: string, example: "Updated task text" }
-        completed: { type: integer, example: 1 }
+  UpdateTaskRequest:
+    type: object
+    properties:
+      content:
+        type: string
+        example: "Updated task text"
+      completed:
+        type: integer
+        example: 1
 
-    PaginatedTasks:
-      type: object
-      properties:
-        q: { type: string, example: "groceries" }
-        page: { type: integer, example: 1 }
-        per_page: { type: integer, example: 5 }
-        total: { type: integer, example: 100 }
-        pages: { type: integer, example: 20 }
-        has_next: { type: boolean, example: true }
-        has_prev: { type: boolean, example: false }
+  PaginatedTasks:
+    type: object
+    properties:
+      q:
+        type: string
+        example: "groceries"
+      sort:
+        type: string
+        example: "desc"
+      page:
+        type: integer
+        example: 1
+      per_page:
+        type: integer
+        example: 5
+      total:
+        type: integer
+        example: 100
+      pages:
+        type: integer
+        example: 20
+      has_next:
+        type: boolean
+        example: true
+      has_prev:
+        type: boolean
+        example: false
+      items:
+        type: array
         items:
-          type: array
-          items:
-            $ref: "#/components/schemas/Task"
+          $ref: "#/definitions/Task"
 
-    ImportSummary:
-      type: object
-      properties:
-        inserted: { type: integer, example: 10 }
-        skipped: { type: integer, example: 2 }
-        errors: { type: integer, example: 0 }
+  ImportSummary:
+    type: object
+    properties:
+      inserted:
+        type: integer
+        example: 10
+      skipped:
+        type: integer
+        example: 2
+      errors:
+        type: integer
+        example: 0
